fixed crossdomain issue

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center">
-                    <p>If you have any questions on the extension's use please reach out to <b>jondinu [at] gmail.com</b>.</p>
+                    <p>If you have any questions on the extension's use please reach out to <b>jondinu [at] gmail.com</b> or create a Github <a href="https://github.com/Jay-Oh-eN/scratch-viz/issues">issue</a>.</p>
 
                     <p>Especially if you are a developer and would like to extend it, or you are a teacher and you would like to use it in your classroom.</p>
                 </div>
@@ -215,7 +215,7 @@
 
       <ul>
         <li>Start with a <span class="label label-info">Chart</span> block.</li>
-        <li>Use <span class="text-danger">one</span> (and only one) <a href="marks"><b>mark</b></a> block.</li>
+        <li>Use <span class="text-danger">one</span> (and only one) <a href="marks"><b>mark</b></a> block (<span class="text-success">circle</span> here).</li>
         <li>You are required to use exactly <span class="text-danger">one</span> <span class="label label-success">x</span> and exactly <span class="text-danger">one</span> <span class="label label-success">y</span> block.</li>
         <li>End with a <span class="label label-info">draw</span> block.</a></li>
       </ul>
