stylistic stuff in documentation

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
       <ul>
         <li>Start with a <span class="label label-info">Chart</span> block.</li>
-        <li>Use <span class="text-danger">one</span> (and only one) <a href="marks"><b>mark</b></a> block (<span class="text-success">circle</span> here).</li>
+        <li>Use <span class="text-danger">one</span> (and only one) <a href="marks"><b>mark</b></a> block (<span class="label label-success">circle</span> here).</li>
         <li>You are required to use exactly <span class="text-danger">one</span> <span class="label label-success">x</span> and exactly <span class="text-danger">one</span> <span class="label label-success">y</span> block.</li>
         <li>End with a <span class="label label-info">draw</span> block.</a></li>
       </ul>
