make images responsive

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
             margin: 20px auto;
         }
 
+        .block img, img.block {
+          max-width: 100%;
+        }
+
     </style>
 </head>
 <body>
@@ -211,7 +215,7 @@
       </ul>
       <p>There are only a few rules to follow in order to make a sensible visualization and ensure that the extension works successfully.  Again, the best way to get started quickly is to start from an <a href="#examples">example</a>, but as long as you obey the following you should be fine:</p>
 
-      <img src="images/charts/example.png" style="height: 400px"/>
+      <img src="images/charts/example.png" style="height: 400px" class="block"/>
 
       <ul>
         <li>Start with a <span class="label label-info">Chart</span> block.</li>
